[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1" }
axum = "0.6.20"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-livereload = "0.8.2"

[dev-dependencies]
tower = { version = "0.4.13", features = ["full"] }
